--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
     <!-- Formulaire de Contact -->
     <div class="flex flex-col isolate h-screen w-screen items-center bg-white" id="contact">
       <h1 class="text-5xl font-semibold tracking-tight text-balance text-gray-700 sm:text-6xl text-center mt-16">Me contacter</h1>
-      <h2 class="text-2xl text-gray-700 mt-2 mb-8 w-150 text-center">Pour pouvoir me contacter, vous devez prouver votre passion pour le football en répondant à ce questionnaire</h2>
+      <h2 class="text-2xl text-gray-700 mt-2 mb-8 text-center">Pour pouvoir me contacter, vous devez prouver votre passion pour le football en répondant à ce questionnaire</h2>
       <div id="divquest" class="flex flex-col bg-white p-6 rounded-lg shadow-lg max-w-md w-full mt-12">
         <h1 class="text-2xl font-bold mb-4 text-center text-gray-700">Questionnaire</h1>
         <div id="question" class="text-xl font-bold mb-4 text-center text-gray-700">Quel est la capitale de la France ?</div>
