--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
           
           <div class="flex items-center justify-between">
             <a href="#" class="-m-1.5 p-1.5">
-              <span class="sr-only">Your Company</span>
-              <img class="h-8 w-auto" src="https://tailwindui.com/plus-assets/img/logos/mark.svg?color=indigo&amp;shade=600" alt="">
+              <span class="sr-only">Psg</span>
+              <img class="h-8 w-auto" src="./static/img/logo.png" alt="">
             </a>
             <button id="closeMenu" type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
               <span class="sr-only">Close menu</span>
