Update Classement Title center

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 
       <!-- Classement via Api -->
       <div class="standing h-screen flex flex-col" id="classement1">
-        <h1 class="text-6xl font-semibold text-black-700 text-center">Classement</h1>
+        <h1 class="flex justify-center text-6xl font-semibold text-black-700 text-center">Classement</h1>
         <p class="text-2xl text-center mb-6" style="position: relative; z-index: 10;">
           Voici le classement de la ligue 1, récupéré via une api gratuite :
           <a href="https://www.football-data.org" target="_blank" style="text-decoration: underline; z-index: 10; position: relative;">football-data.org</a>
