Update index.html md responsive to sm

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
               </a>
             </div>
            
-            <div class="hidden md:flex md:gap-x-12">
+            <div class="hidden sm:flex sm:gap-x-12">
 
               <a href="#classement1" class="text-sm/6 font-semibold text-gray-900">Classement</a>
               <a href="#contact" class="text-sm/6 font-semibold text-gray-900">Contact</a>
               <label for="my_modal_7" class="cursor-pointer text-sm/6 font-semibold text-gray-900 bg-transparent border-none p-0">Calculatrice</label>
             </div>
-            <button id="openMenu" class="p-2 text-gray-700 md:hidden md:flex">
+            <button id="openMenu" class="p-2 text-gray-700 sm:hidden sm:flex">
               <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
               </svg>
