Update index.html flou arriere plan Slider menu

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             </button>
           </div>
 
-          <div class="mt-6 flow-root">
+          <div class="mt-6 flow-root backdrop-blur-sm">
             <div class="-my-6 divide-y divide-gray-500/10">
               <div class="space-y-2 py-6">
                 <a href="#classement1" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold text-gray-900 hover:bg-gray-50">Classement</a>
