--- a/src/index.html
+++ b/src/index.html
@@ -86,8 +86,7 @@
               <h1 class="text-5xl font-semibold tracking-tight text-balance text-gray-700 sm:text-6xl">Paris Saint-Germain</h1>
               <p class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8">Le Paris Saint-Germain (PSG) est un club de football français fondé en 1970, basé à Paris. Il est l’un des clubs les plus titrés de France, dominant la Ligue 1 ces dernières années grâce à des stars comme Mbappé, Neymar et Messi. Soutenu financièrement par le Qatar depuis 2011, le PSG vise la Ligue des Champions mais peine encore à la remporter.</p>
               <div class="mt-10 flex items-center justify-center gap-x-6">
-                <a href="#slider" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Découvrir</a>
-                <a href="#classement" class="text-sm/6 font-semibold text-gray-900">Classement actuelle <span aria-hidden="true">→</span></a>
+                <a href="#classement1" class="text-sm/6 font-semibold text-gray-900">Classement actuelle <span aria-hidden="true">→</span></a>
               </div>
             </div>
           </div>
@@ -99,7 +98,7 @@
 
       <!-- Classement via Api -->
       <div class="standing h-screen flex flex-col" id="classement1">
-        <h1 class="text-6xl font-semibold text-black-700 text-center">Classement</h1>
+        <h1 class="text-6xl font-semibold text-black-700 text-center" >Classement</h1>
         <p class="text-2xl text-center mb-6" style="position: relative; z-index: 10;">
           Voici le classement de la ligue 1, récupéré via une api gratuite :
           <a href="https://www.football-data.org" target="_blank" style="text-decoration: underline; z-index: 10; position: relative;">football-data.org</a>
